--- a/right_review_codebase/css/darktheme.css
+++ b/right_review_codebase/css/darktheme.css
@@ -14,3 +14,38 @@ body {
 {
   color: #FFFFFF !important;
 }
+table {
+  width:min-content;
+}
+.card-body {
+  width:min-content;
+}
+.card
+{
+  width: min-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+td
+{
+  padding-left: 1em;
+  padding-right: 1em;
+}
+td
+{
+  padding-bottom: 1em;
+}
+textarea
+{
+  border-radius: .5em;
+  width: 17em !important;
+}
+input
+{
+  border-radius: .5em;
+  width: 17em !important;;
+}
+button
+{
+  border-radius: 2em;
+}
