logout button functioning and item.php is done

--- a/right_review_codebase/css/item.css
+++ b/right_review_codebase/css/item.css
@@ -30,3 +30,11 @@
     background-color: red;
     color: white;
 }
+#logoutButton {
+    background-color: red;
+    color: white;
+    position: absolute;
+    right: 75px;
+    top: 75px;
+    font-size: 30px;
+}
