item page finished: back to search page redirect button working

--- a/right_review_codebase/css/item.css
+++ b/right_review_codebase/css/item.css
@@ -38,3 +38,12 @@
     top: 75px;
     font-size: 30px;
 }
+
+#backToSearchPageButton {
+    background-color: green;
+    color: white;
+    position: absolute;
+    right: 200px;
+    top: 75px;
+    font-size: 30px;
+}
